# coursely

./: README.md  course_output.md  course_output1.md  course_output2.md  pyproject.toml
src/coursely/: crew.py  main.py
src/coursely/config/: agents.yaml  tasks.yaml
